force-app/main/default/objects/Centro_de_Distribuicao__c/Centro_de_Distribuicao__c.object-meta.xml
<CustomObject>
    <label>Centro de Distribuição</label>
    <nameField>
        <label>Nome de Centro de Distribuição</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Centros de Distribuição</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>