force-app/main/default/objects/Centro_de_Distribuicao__c/fields/BairroReversa__c.field-meta.xml
<CustomField>
    <fullName>BairroReversa__c</fullName>
    <label>Bairro</label>
    <length>255</length>
    <type>Text</type>
</CustomField>