force-app/main/default/objects/Centro_de_Distribuicao__c/fields/CD__c.field-meta.xml
<CustomField>
    <fullName>CD__c</fullName>
    <label>CD</label>
    <length>255</length>
    <type>Text</type>
</CustomField>