force-app/main/default/objects/Centro_de_Distribuicao__c/fields/CepReversa__c.field-meta.xml
<CustomField>
    <fullName>CepReversa__c</fullName>
    <label>CEP</label>
    <length>10</length>
    <type>Text</type>
</CustomField>