force-app/main/default/objects/Centro_de_Distribuicao__c/fields/CidadeReversa__c.field-meta.xml
<CustomField>
    <fullName>CidadeReversa__c</fullName>
    <label>Cidade</label>
    <length>255</length>
    <type>Text</type>
</CustomField>