force-app/main/default/objects/Centro_de_Distribuicao__c/fields/ComplementoReversa__c.field-meta.xml
<CustomField>
    <fullName>ComplementoReversa__c</fullName>
    <label>Complemento</label>
    <length>255</length>
    <type>Text</type>
</CustomField>