force-app/main/default/objects/Centro_de_Distribuicao__c/fields/Endereco__c.field-meta.xml
<CustomField>
    <fullName>Endereco__c</fullName>
    <label>Endereço</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>