force-app/main/default/objects/Centro_de_Distribuicao__c/fields/EnderecoCD__c.field-meta.xml
<CustomField>
    <fullName>EnderecoCD__c</fullName>
    <formula>LogradouroCD__c &amp; &quot;, &quot; &amp; NumeroCD__c &amp; &quot;, &quot; &amp; ComplementoCD__c &amp; BR() &amp;
&quot;CEP: &quot; &amp; CepCD__c &amp; &quot; - &quot; &amp; BairroCD__c &amp; BR() &amp;
CidadeCD__c &amp; &quot;/&quot; &amp; TEXT(UFCD__c)</formula>
    <label>Endereço do CD</label>
    <type>Text</type>
</CustomField>