force-app/main/default/objects/Centro_de_Distribuicao__c/fields/EnderecoReversa__c.field-meta.xml
<CustomField>
    <fullName>EnderecoReversa__c</fullName>
    <formula>LogradouroReversa__c &amp; &quot;, &quot; &amp; NumeroReversa__c &amp; &quot;, &quot; &amp; ComplementoReversa__c &amp; BR() &amp;
&quot;CEP: &quot; &amp; CepReversa__c &amp; &quot; - &quot; &amp; BairroReversa__c &amp; BR() &amp;
CidadeReversa__c &amp; &quot;/&quot; &amp; TEXT(UFReversa__c)</formula>
    <label>Endereço de Entrega Reversa</label>
    <type>Text</type>
</CustomField>