force-app/main/default/objects/Centro_de_Distribuicao__c/fields/LogradouroCD__c.field-meta.xml
<CustomField>
    <fullName>LogradouroCD__c</fullName>
    <label>Logradouro</label>
    <length>255</length>
    <type>Text</type>
</CustomField>