force-app/main/default/objects/Centro_de_Distribuicao__c/fields/LogradouroReversa__c.field-meta.xml
<CustomField>
    <fullName>LogradouroReversa__c</fullName>
    <description>Logradourao</description>
    <label>Logradouro</label>
    <length>255</length>
    <type>Text</type>
</CustomField>