force-app/main/default/objects/Centro_de_Distribuicao__c/fields/NumeroReversa__c.field-meta.xml
<CustomField>
    <fullName>NumeroReversa__c</fullName>
    <label>Número</label>
    <length>50</length>
    <type>Text</type>
</CustomField>