force-app/main/default/objects/Centro_de_Distribuicao__c/fields/UFReversa__c.field-meta.xml
<CustomField>
    <fullName>UFReversa__c</fullName>
    <label>Estado</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>States</valueSetName>
    </valueSet>
</CustomField>